# VolView

./: .browserslistrc  .env.example  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.js  vite.config.ts  vue.config.js  wdio.chrome.conf.ts  wdio.conf.ts  wdio.dev.conf.ts  wdio.shared.conf.ts
.__mf__temp/remote/: localSharedImportMap.js
.__mf__temp/volview_remote/: localSharedImportMap.js
.github/: README.md
.github/copilot/: instructions.md  technical.md
.github/workflows/: bump-version.yml  checks.yml  e2e.yml  prerelease.yml  publish-npm.yml  publish.yml  release.yml
backend-contract/: README.md  index.ts  package.json
backend-contract/processing/: ids.ts  index.ts  openapi.ts  schema-json.ts  task-spec.ts  wire.ts
backend-contract/scripts/: generate-json-schema.ts  generate-openapi.ts  sync-backend.sh  verify-backend.sh
docs/: authentication.md  building_for_production.md  configuration_file.md  cors.md  deploying_volview.md  deployment_overview.md  gallery.md  index.md  loading_data.md  mouse_controls.md  quick_start_guide.md  rendering.md  server.md  state_files.md  toolbar.md  welcome_screen.md
docs/.vitepress/: config.ts
documentation/: config.js
documentation/content/: index.pug
documentation/data/: menu.yml
documentation/tpl/: __en__  __sidebar__
lungair/: README.md
lungair/cerner-app-launch/: index.html  launch.html
netlify/edge-functions/: visits.ts
patches/: @itk-wasm+dicom+3.2.1.patch  @kitware+vtk.js+22.4.0.patch  @kitware+vtk.js+22.6.1.patch  @kitware+vtk.js+24.5.6.patch  @kitware+vtk.js+25.0.1.patch  @kitware+vtk.js+26.5.1.patch  @kitware+vtk.js+26.5.4.patch  @kitware+vtk.js+26.8.0.patch  @kitware+vtk.js+27.1.2.patch  @kitware+vtk.js+29.11.2.patch  @kitware+vtk.js+30.9.0.patch  @velipso+polybool+1.1.0.patch  @vueuse+core+10.7.2.patch  itk-wasm+1.0.0-b.188.patch  itk-wasm+1.0.0-b.196.patch  itk-wasm+1.0.0-b.66.patch  jsdom-global+3.0.2.patch  vue-toastification+1.7.14.patch  vuetify+2.6.10.patch
public/: global.css  index.html
server/: README.md  helper.py  host.js  pyproject.toml  serialize.js  serialize.py  server.py  test.py
server/custom/: user_api.py
server/examples/: example_api.py  example_class_api.py  example_fastapi.py
server/methods/: median_filter_method.py  methods_api.py  methods_class_api.py  methods_fastapi.py  methods_utils.py  paint_interpolation_method.py
server/volview_server/: __init__.py  __main__.py  api.py  asgi.py  client_store.py  converters.py  exceptions.py  itk_helpers.py  rpc_router.py  rpc_server.py  session.py  volview_api.py
server/volview_server/chunking/: __init__.py  chunking_packet.py  chunking_server.py
server/volview_server/transformers/: __init__.py  exceptions.py  image_data.py  itk_helpers.py
src/: App.vue  config.ts  constants.js  constants.ts  env.d.ts  global.css  global.d.ts  instances.js  instances.ts  io.js  main-monorepo.js  main.js  shims-dicomweb-client.d.ts  shims-itk.d.ts  shims-misc.d.ts  shims-vtk.d.ts  shims-worker.d.ts  vitest.d.ts
src/actions/: importDicomChunks.ts  loadUserFiles.ts
src/components/: AboutBox.vue  AiModule.vue  Annotations.vue  AnnotationsModule.vue  App.vue  AppBar.vue  AppEmbedded.vue  AvatarListCard.vue  CineViewer.vue  CineViewerOverlay.vue  CloseableDialog.vue  ColorDot.vue  ColorFunctionSlider.vue  ControlButton.vue  ControlsModal.vue  ControlsStrip.vue  ControlsStripTools.vue  CurrentImageProvider.vue  DataBrowser.vue  DataSecurityBox.vue  DicomQuickInfoButton.vue  DicomWebLoader.vue  DragAndDrop.vue  EditableChipList.vue  FillBetweenControls.vue  FillBetweenParameterControls.vue  FillHolesParameterControls.vue  GaussianSmoothControls.vue  GaussianSmoothParameterControls.vue  GroupableItem.vue  HelloWorld.vue  ImageDataBrowser.vue  ImageListCard.vue  IsolatedDialog.vue  ItemGroup.vue  KeyboardShortcuts.vue  LabelControls.vue  LabelEditor.vue  LabelMenu.vue  LabelToolButton.vue  (+77 more)
src/componentsX/: PatientBrowser.vue  VolumeRendering.vue  VtkThreeView.vue  VtkTwoView.vue
src/composables/: actions.ts  annotationTool.ts  domEvents.js  isViewAnimating.ts  manageVTKSubscription.ts  onImageDeleted.ts  onPausableVTKEvent.ts  onProxyManagerEvent.ts  onVTKEvent.ts  proxyManager.js  proxyManager.ts  resizeObserver.js  scene.js  stableDeepRef.ts  store.js  untilLoaded.ts  use2DMouseControls.ts  useAppLoadingNotifications.ts  useAutoFitState.ts  useBaseSliceRepresentation.ts  useCameraAutoResetState.ts  useCameraOrientation.ts  useCineFrame.ts  useCineRendering.ts  useColoringEffect.ts  useCroppingEffect.ts  useCurrentFrameOfReference.ts  useCurrentImage.ts  useCurrentSlice.ts  useCvrEffect.ts  useDoubleRecord.ts  useEffectiveView.ts  useErrorMessage.ts  useEventListener.ts  useFrameOfReference.ts  useGlobalErrorHook.ts  useGlobalLayerColorConfig.ts  useKeyboardShortcuts.ts  useLPSDirections.ts  useLabelMapRepresentations.ts  (+34 more)
src/core/: ahi-api.ts  dicom-web-api.ts  dicomTags.ts  history.ts  id.ts  importDataSources.ts  launchLoad.ts  manifestRefs.ts  pipeline.ts  progressiveImage.ts  provider.ts  proxies.ts  stateMachine.ts  viewTypes.ts
src/dicom-web/: DicomWebBrowser.vue  DicomWebHost.vue  DicomWebInfos.vue  DicomWebLoader.vue  DicomWebSettings.vue  PatientDetails.vue  PatientList.vue  ServerParameters.vue  StudyVolumeDicomWeb.vue  dicom-meta-store.ts  dicom-meta.store.ts  dicomWeb.ts  (+4 more)
src/io/itk-dicom/: .gitignore  CMakeLists.txt  base64.hpp  charset.cpp  charset.hpp  dicom.cpp  readTRE.cpp  readTRE.hpp
src/io/itk-dicom/emscripten-build/: dicom.js  dicom.umd.js  dicom.wasm.zst
src/io/itk-dicom/web-build/: dicom.js  dicom.umd.js  dicomWasm.js  dicomWasm.wasm
src/io/resample/: .gitignore  CMakeLists.txt  itkWasmUtils.js  resample.cxx  resample.ts
src/io/resample/emscripten-build/: resample.js  resample.umd.js  resample.umd.wasm  resample.wasm  resample.wasm.zst
tests/: browserTestUtils.ts  e2eTestUtils.ts  setupVitest.ts  testUtils.js
(+727 files in other folders)
