[tool.poetry]
name = "volview_server"
version = "0.1.0"
description = "The VolView Python Server"
authors = ["Forrest <forrest.li@kitware.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8.1"
itk = "^5.3.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
numpy = "^1.24.1"
aiohttp = "^3.8.3"
python-socketio = "^5.8.0"
charset-normalizer = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
